Multires undo broken with shared object data #57652

Closed
opened 2018-11-06 14:42:46 +01:00 by Julien Kaspar · 6 comments
Member

Blender Version
Broken: 32dca36afb1

Short description of error
When sculpting on an object with a multires modifier and having another object that shared the same object data, undo does not work.
At some point when continuously undoing it goes back into object mode, undoing everything in sculpt mode at once. But undo within sculpt mode does not work.

**Blender Version** Broken: 32dca36afb1 **Short description of error** When sculpting on an object with a multires modifier and having another object that shared the same object data, undo does not work. At some point when continuously undoing it goes back into object mode, undoing everything in sculpt mode at once. But undo within sculpt mode does not work.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

Added subscribers: @Sergey, @ideasman42, @lichtwerk

Added subscribers: @Sergey, @ideasman42, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2018-11-07 09:18:03 +01:00

This is with WITH_OPENSUBDIV_MODIFIER, right?
Can confirm then.

Not sure if this is for @ideasman42 (undo) or @Sergey (opensubdiv)?

Assigning @Sergey for the time being...

This is with `WITH_OPENSUBDIV_MODIFIER`, right? Can confirm then. Not sure if this is for @ideasman42 (undo) or @Sergey (opensubdiv)? Assigning @Sergey for the time being...
Author
Member

@lichtwerk Oh yeah you're right. This is with Open Subdiv. Forgot to add that.

@lichtwerk Oh yeah you're right. This is with Open Subdiv. Forgot to add that.

This issue was referenced by blender/blender@89c762dd99

This issue was referenced by blender/blender@89c762dd991c64fa46803b3459a2197e25b6138a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#57652
No description provided.