Fix T57652: Multires undo broken with shared object data