source/blender/blenkernel/BKE_multires.h
@@ -49,7 +49,9 @@ void multires_customdata_delete(struct Mesh *me);
 
 void multires_set_tot_level(struct Object *ob, struct MultiresModifierData *mmd, int lvl);
 
-void multires_mark_as_modified(struct Object *ob, enum MultiresModifiedFlags flags);
+void multires_mark_as_modified(struct Depsgraph *depsgraph,
+                               struct Object *object,
+                               enum MultiresModifiedFlags flags);
 
 void multires_force_update(struct Object *ob);
 void multires_force_render_update(struct Object *ob);
